--- a/Desktop app/package.json
+++ b/Desktop app/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/xeladude/School-work-app#readme",
   "devDependencies": {
     "electron": "^38.2.0"
+  },
+  "dependencies": {
+    "electron-store": "^11.0.2"
   }
 }
